# UniChatMod

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  LICENSE  README.md  build.sh  colorize.py  meson.build  meson_options.txt  portable_cross.txt  posix_cross.txt  run.py  run.sh  win_cross.txt
docker/ubuntu_xenial/: Dockerfile
gui/: meson.build
gui/cli/: cli_config.h.in  clui.c  meson.build
gui/lazarus/: UniChatMod.lpi  UniChatMod.lpr  UniChatMod.res  build.sh.in  convert.py  lazui.py  meson.build  uaboutform.lfm  uaboutform.pas  uconfform.lfm  uconfform.pas  ucoreclass.pas  uimagelisthelper.pas  umainform.lfm  umainform.lrj  umainform.pas
gui/lazarus/UCM_AL/: ucoreclass.pas  ucorelogger.pas
gui/lazarus/icons/: gen_by_res.sh  gen_by_res.sh.in  handler.py  meson.build
gui/ncurses/: main.c  main.h  meson.build  tui.c  tui.h  tui_config.h.in
gui/ncurses/app/: app.c  app.h  argcmd.c  meson.build
gui/ncurses/plugin/: meson.build  tui.c  tui.h
lib_core/: alloc.c  alloc.h  api.c  api.h  config.h.in  core.c  core.h  db.c  db.h  defs.h  evhook.c  evhook.h  ioqs.h  logger.c  mainloop.c  meson.build  mqueue.c  plugmgr.c  plugmgr.h  threading.c  threading.h  ucm.c  ucm.h  ucm.pas  unicode.c
lib_core/bindings/fpc/: ucm.pas
lib_core/include/: api.h  core.h  cpentupd.h  db.h  defs.h  gettext.h  logger.h  mainloop.h  mqueue.h  ucm.h  unicode.h
lib_core/osal/: osal-linux.c  osal.h  threading.c
lib_core/unicode/: uconv.c  uconv.h  unicode.c  unicode.h
lib_core/utf8proc/: utf8.c  utf8.h
libs/: meson.build
libs/plugins/: meson.build
libs/plugins/db_mdbx/: db_mdbx.c  db_mdbx.h  mdbx_core.c  meson.build
libs/plugins/gui_curses/: meson.build  tui.c  tui.h
libs/plugins/gui_sdl2/: meson.build  sdl2ui.c  sdl2ui.h
libs/plugins/log_file/: log_file.c  meson.build
libs/plugins/net_uc/: netuc.c  netuc.h  network.c  network.h  protocol.c  protocol.h
libs/plugins/net_uc/rc6/: rc6.c  rc6.h
libs/ucm/: api.c  core.c  cpentupd.c  db.c  errors.h  evhook.c  flags.c  logger.c  mainloop.c  meson.build  mqueue.c  plugmgr.c  ucm.c  unicode.c
libs/ucm/bindings/cpp/: ucm.cpp  ucm.hpp
libs/ucm/bindings/fpc/: ucm.pas
libs/ucm/include/: api.h  db.h  defs.h  evhook.h  gettext.h  logger.h  mainloop.h  md5.h  plugmgr.h  ucm.h
libs/ucm/include/uni/: uapi.h  ucontacts.h  udatabase.h  udefs.h  uerrors.h  uevents.h  ugui.h  umacro.h  umain.h  uplugin.h  uprotocols.h  usignals.h  uuvapi.h
libs/ucm/osal/: osal-dynlib.c  osal-dynlib.h  osal-fs.c  osal-memory.c  osal-memory.h  osal-threading.c  osal-threading.h  osal-uuid.c
libucm/: api.c  config.h.in  core.c  cpentupd.c  db.c  errors.h  evhook.c  flags.c  ioqs.c  logger.c  mainloop.c  meson.build  mqueue.c  osal.c  plugmgr.c  ucm.c  unicode.c
libucm/bindings/cpp/: ucm.cpp  ucm.hpp
libucm/include/: api.h  core.h  cpentupd.h  db.h  defs.h  evhook.h  flags.h  ioqs.h  logger.h  mainloop.h  md5.h  mqueue.h  plugmgr.h  ucm.h  unicode.h
libucm/include/ucm/: udatabase.h  uevents.h  ugui.h  umacro.h  umain.h  uplugin.h  uprotocols.h
libucm/include/uni/: uapi.h  ucontacts.h  udefs.h  uevents.h  umain.h  umsgs.h  usignals.h
libucm/osal/: meson.build  osal-dynlib.c  osal-dynlib.h  osal-filesys.c  osal-filesys.h  osal-fs.c  osal-fs.h  osal-intrnl.c  osal-intrnl.h  osal-memory.c  osal-memory.h  osal-system.c  osal-system.h  osal-threading.c  osal-threading.h  osal-timers.c  osal-timers.h  osal-uuid.c  osal-uuid.h  osal-uvwrap.c  osal-uvwrap.h  osal.c  osal.h
osal/: common.c  osal-intrnl.h  osal-linux.c  osal-windows.c  osal.c  osal.h
osal/linux/: fs.c  thread.c
osal/windows/: fs.c  thread.c
plugins/: meson.build
plugins/cfg_std/: cfg_mdbx.c
plugins/db_mdbx/: db_contacts.c  db_crptprov.c  db_events.c  db_mdbx.c  db_mdbx.h  db_mdbx_api.c  db_mdbx_api.h  db_mdbx_base.c  db_mdbx_base.h  db_settings.c  mdbx_core.c  mdbx_core.h  meson.build
plugins/db_mdbx/tools/: mdbx_chk.c  mdbx_dump.c
plugins/gui_curses/: meson.build
plugins/gui_curses/app/: app.c  app.h  argcmd.c  argcmd.h  getopt_win.h  meson.build  osal.c  osal.h
plugins/gui_curses/plugin/: meson.build  tui.c  tui.h
plugins/log_file/: log_file.c  meson.build
plugins/net_legacy/: meson.build  net_legacy.c  net_legacy.h  network.c  network.h  protocol.c
plugins/net_legacy/rc6/: meson.build  rc6.c  rc6.h
plugins/net_uc/: meson.build  netuc.c  network.c  network.h  protocol.c  protocol.h
plugins/net_uc/rc6/: rc6.c  rc6.h
src/: alloy.c  app.c  app.h  app_cwin.c  app_linux.c  argcmd.c  cmdline.c  flags.c  flags.h  getopt_win.h  loader.c  meson.build  osal.c  osal.h
src/common/: cmdline.c  cmdline.h  flags.c  loader.c  meson.build  osal.h
src/curses/: lindefs.h  meson.build  tui.c  tui.h  windefs.h
src/linux/: app.c  meson.build
src/posix/: app.c  meson.build
subprojects/ucl/: autobuild.sh  meson.build
subprojects/ucl/src/: meson.build
tests/: meson.build  run.c  util.c  util.h
tests/suites/: meson.build  utf8_suite.c
tools/: echo_docker_template.sh  glob-recursive.py  manager.sh
tools/travis/: coverity.sh  echo_docker_template.sh  id_rsa.enc  manager.sh  sfupload.sh
