#-- options ----------------------------------
option ('enable_traces', type: 'boolean', value: 'true',
        description: 'use stdio messages in wfft lib')
option ('message_queue_size', type: 'integer', value: 200,
        description: 'messages queues blocks count')
option ('session_count', type: 'integer', value: 256,
        description: 'max active sessions in one instance')
option ('string_buffer_capacity', type: 'integer', value: 4096,
        description: 'string buffers size. Message buffers DONT this')

option ('limit_plugins_count', type: 'integer', value: 100,
        description: 'limit loaded plugins count')

option ('build_bundle', type: 'boolean', value: 'true',
        description: 'build single path application or classic *nix')
option ('base_inbundle', type: 'boolean', value: 'true',
        description: 'build basepath into bandle (full portable app)')
option ('path_libs_lookup', type: 'string', value: 'libs',
        description: 'libraries subdir')
option ('path_modules_lookup', type: 'string', value: 'mods',
        description: 'modules (plugins) subdir')
option ('path_devels_lookup', type: 'string', value: 'include',
        description: 'developer files subdir')
option ('path_docs_lookup', type: 'string', value: 'docs',
        description: 'documents (manuals, README, LICENSE etc.) path')

option ('build_with_plugins', type: 'boolean', value: 'true',
        description: 'build only core or with all plugins')
option ('build_with_tests', type: 'boolean', value: 'false',
        description: 'build and run enabled tests')

# === ATTENTION !!! ===
# It is not guaranteed that the assembly will be correct with the versions of the libraries that differ from those offered.

option ('custom_libs', type: 'boolean', value: 'false',
        description: 'build with target system libraries if available')
option ('build_with_hidden_api', type: 'boolean', value: 'true',
        description: 'build with hidden internal API')
option ('build_with_full_commit', type: 'boolean', value: 'true',
        description: 'full (without --short key) rev-value commit code in plugin options')

option ('build_with_gui', type: 'boolean', value: 'true',
        description: 'build standart gui')
option ('gui_enable_lazarus', type: 'boolean', value: 'false',
        description: 'enable lazarus based gui as variant')
option ('gui_enable_ncurses', type: 'boolean', value: 'true',
        description: 'enable tui interface')
option ('auto_generate_icons', type: 'boolean', value: 'false',
        description: 'create all icons set automaticaly or each size manual')
option ('valgrind_support', type: 'boolean', value: 'false',
        description: 'build with enabled valgrind defines')
